--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,38 @@
 version: "3"
+
 services:
 
   oj-redis:
-    image: redis:4.0-alpine
+    image: redis:7-alpine
     restart: always
     volumes:
       - ./data/redis:/data
+    command: ["redis-server", "--appendonly", "yes"]
 
   oj-postgres:
-    image: postgres:10-alpine
+    image: postgres:14-alpine
     restart: always
+    environment:
+      POSTGRES_DB: onlinejudge
+      POSTGRES_USER: onlinejudge
+      POSTGRES_PASSWORD: onlinejudge
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=onlinejudge
-      - POSTGRES_USER=onlinejudge
-      - POSTGRES_PASSWORD=onlinejudge
 
   oj-judge:
-    image: registry.cn-hongkong.aliyuncs.com/oj-image/judge:1.6.1
+    image: ghcr.io/gugugagaoj/judgeserver:latest
     restart: always
+
+    environment:
+      SERVICE_URL: http://oj-judge:8080
+      BACKEND_URL: http://oj-backend:8000/api/judge_server_heartbeat/
+      TOKEN: SUPER_MEOW_SECRET_TOKEN  
+
+    volumes:
+      - ./data/backend/test_case:/test_case:ro
+      - ./data/judge_server/log:/log
+      - ./data/judge_server/run:/judger
+
     read_only: true
     cap_drop:
       - SETPCAP
@@ -30,32 +43,26 @@ services:
       - FSETID
     tmpfs:
       - /tmp
-    volumes:
-      - ./data/backend/test_case:/test_case:ro
-      - ./data/judge_server/log:/log
-      - ./data/judge_server/run:/judger
-    environment:
-      - SERVICE_URL=http://oj-judge:8080
-      - BACKEND_URL=http://oj-backend:8000/api/judge_server_heartbeat/
-      - TOKEN=CHANGE_THIS
-      # - judger_debug=1
 
   oj-backend:
-    image: registry.cn-hongkong.aliyuncs.com/oj-image/backend:1.6.1
+    image: ghcr.io/gugugagaoj/onlinejudge:latest
     restart: always
+
     depends_on:
       - oj-redis
       - oj-postgres
       - oj-judge
+
+    environment:
+      POSTGRES_DB: onlinejudge
+      POSTGRES_USER: onlinejudge
+      POSTGRES_PASSWORD: onlinejudge
+
+      JUDGE_SERVER_TOKEN: SUPER_MEOW_SECRET_TOKEN  
+
     volumes:
       - ./data/backend:/data
-    environment:
-      - POSTGRES_DB=onlinejudge
-      - POSTGRES_USER=onlinejudge
-      - POSTGRES_PASSWORD=onlinejudge
-      - JUDGE_SERVER_TOKEN=CHANGE_THIS
-      # - FORCE_HTTPS=1
-      # - STATIC_CDN_HOST=cdn.oj.com
+
     ports:
-      - "0.0.0.0:80:8000"
-      - "0.0.0.0:443:1443"
+      - "80:8000"
+      - "443:1443"
